--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "repository": {
     "type": "git",
-    "url": "https://github.com/Bijay11201/gpt2"
+    "url": "https://github.com/Bijay11201/gptclone"
   },
   "author": {
     "name": "Bijay11201",
